# slide-ai-agent

./: .gitignore  README.md  docker-compose.yml
.playwright-mcp/: README-Screenshots.html  page-2026-04-24T06-54-24-160Z.yml  page-2026-04-24T06-54-51-194Z.yml  page-2026-04-24T06-55-56-509Z.yml  page-2026-04-24T06-56-52-063Z.yml  page-2026-04-24T06-56-54-986Z.yml  page-2026-04-24T06-59-12-885Z.yml  page-2026-04-24T06-59-21-968Z.yml  page-2026-04-24T06-59-48-761Z.yml  page-2026-04-24T06-59-58-573Z.yml  page-2026-04-24T07-07-44-178Z.yml  page-2026-04-24T07-07-51-424Z.yml  page-2026-04-24T07-08-18-993Z.yml  page-2026-04-24T07-08-25-733Z.yml  page-2026-04-24T07-08-30-351Z.yml  page-2026-04-24T07-08-46-375Z.yml  page-2026-04-24T07-08-51-657Z.yml  page-2026-04-24T07-10-18-720Z.yml  page-2026-04-24T07-10-23-800Z.yml  page-2026-04-24T07-10-43-897Z.yml  page-2026-04-24T07-10-52-314Z.yml  page-2026-04-24T07-10-55-076Z.yml  page-2026-04-24T07-12-04-136Z.yml  page-2026-04-24T07-20-55-361Z.yml  page-2026-04-24T07-23-56-642Z.yml  page-2026-04-24T07-24-09-620Z.yml
be/: .env.example  Dockerfile  pyproject.toml
be/src/: main.py
be/src/ai/agent/: agent.py  prompts.py  state.py  tools.py
be/src/ai/tools/: run_python_code.py
be/src/app/chat/: routes.py
be/src/app/rag/: file_processor.py  qdrant_ops.py  routes.py
be/src/app/slide/: marp_export.py  models.py  routes.py
be/src/libs/: config.py  database.py  qdrant.py
be/tests/: test_marp_export.py  test_run_python_code.py
fe/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+19 files in other folders)
