[project]
name = "slide-ai-agent-be"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-mongodb>=0.1.0",
    # OpenAI
    "openai>=1.40.0",
    # MongoDB
    "motor>=3.5.0",
    "pymongo>=4.8.0",
    # Qdrant (vector store)
    "qdrant-client>=1.11.0",
    # File parsing
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    # Logging
    "loguru>=0.7.0",
    # HTTP client
    "httpx>=0.27.0",
    # Language detection
    "langdetect>=1.0.9",
    # Sentence splitter for RAG chunking
    "nltk>=3.9.0",
    # Chart generation & image tools
    "matplotlib>=3.9.0",
    "Pillow>=10.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
